mType/tests/testFiles/import/pass/diamond/ModuleD.mt
class SharedClass {
    public function getValue(): string {
        return "Shared by B and C";
    }
}
