mType/tests/testFiles/import/error/interfaceCycle/IfaceB.mt
import { IA } from "./IfaceA.mt";

public interface IB extends IA {
    function tagB(): string;
}
